--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    
     /* background-color: #000000; */
 }
 main{
@@ -16,7 +17,7 @@ main{
     grid-template-columns: repeat(2, 1fr);
     /* display: flex; */
     background-color: #2D25A0;
-    ;
+    margin-bottom: 43px;
 }
 .head-title{
     color:#FFFFFF;
@@ -48,5 +49,24 @@ main{
     width: 100%;
 }
 /* ----------------
-    Photo Album
+    Players Album
     --------------- */
+    .photos{
+        margin-left: 180px;
+        margin-right: 210px;
+    }
+    .players{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-column-gap: 30px;
+        grid-row-gap: 27px;
+        width: 1050px;
+        height: 474px;
+    }
+    .player{
+        padding: 15px;
+        box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);;
+    }
+    .player img{
+        width: 100%;
+    }
