--- a/style.css
+++ b/style.css
@@ -70,3 +70,25 @@ main{
     .player img{
         width: 100%;
     }
+    /* ------------------
+          Footer
+       ------------------  */
+       .footer{
+           position: absolute;
+           bottom: 0%;
+           /* display: grid;
+           grid-template-rows: repeat(2, 1fr); */
+           display: flex;
+           flex-direction: column;
+           /* justify-items: center; */
+           align-items: center;
+           margin-left: 475px;
+       }
+       .logo img{
+        width: 484px;
+        height: 110px;
+       }
+       .icons i{
+           width: 32px;
+           height: 32px;
+       }
