--- a/style.css
+++ b/style.css
@@ -76,13 +76,14 @@ main{
        .footer{
            position: absolute;
            bottom: 0%;
-           /* display: grid;
-           grid-template-rows: repeat(2, 1fr); */
-           display: flex;
-           flex-direction: column;
+           display: grid;
+           grid-template-rows: repeat(2, 1fr);
+           /* display: flex;
+           flex-direction: column; */
            /* justify-items: center; */
            align-items: center;
            margin-left: 475px;
+           /* border: 2px solid black; */
        }
        .logo img{
         width: 484px;
@@ -91,4 +92,11 @@ main{
        .icons i{
            width: 32px;
            height: 32px;
+           justify-self: center;
        }
+       .icons{
+           text-align: center;
+       }
+      .copyright{
+          text-align: center;
+      }
