--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ main{
     text-align: center;
     padding-top: 15px;
 }
+.button:hover{
+    transform: scale(1.2);
+}
 .banner{
     /* background-color: #2D25A0; */
     position: absolute;
@@ -49,8 +52,8 @@ main{
     height: 438px;
 }
 .banner:hover{
-    transform: matrix(-1, 0, 0, 1, 0, 0);
-    /* transition: transform 1s; */
+    /* transform: matrix(-1, 0, 0, 1, 0, 0); */
+    transform: scale(1.2);
 }
 
 .banner img{
@@ -148,6 +151,7 @@ main{
        .footer{
         display: grid;
         grid-template-rows: repeat(2, 1fr);
+       }
        .logo img{
         width: 484px;
         height: 110px;
@@ -161,4 +165,10 @@ main{
       .copyright{
           text-align: center;
       }
+
+      /* ------------------
+        Media Queries
+        ------------------- */
+        /* Mobile */
+       
      
